kind/ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: notes-app-deployment
  labels:
    app: notes-app
  namespace: ns-nginx
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: notes-app
  template:
    metadata: 
      labels:
        app: notes-app
    spec:
      containers:
        - name: container-notes-app
          image: trainwithshubham/notes-app-k8s
          ports: 
            - containerPort: 8000
