kind/ingress/nginx-ingress-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: deployment-nginx
  namespace: ns-nginx
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: app-nginx
  template:
    metadata: 
      name: deployement-pod-nginx
      labels:
        app: app-nginx
    spec:
      containers:
        - name: container-nginx
          image: nginx:latest
          ports: 
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: my-volume
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-persistent-volume-claim
